# graft

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: bench_connectors.py
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/: 01_mlp_projector.py  02_perceiver_resampler.py  03_build_from_config.py  04_token_budget.py  README.md
graft/: __init__.py  __main__.py  _nn.py  base.py  cli.py  config.py  exceptions.py  registry.py  serialization.py  specs.py  summary.py
graft/connectors/: __init__.py  avg_pool.py  linear.py  mlp.py  perceiver.py  pixel_shuffle.py  pooling.py  qformer.py
scripts/: check.sh  format.sh  release.sh
tests/: conftest.py  test_base.py  test_cli.py  test_config.py  test_contracts.py  test_linear.py  test_mlp.py  test_perceiver.py  test_pixel_shuffle.py  test_pooling.py  test_qformer.py  test_registry.py  test_serialization.py  test_specs.py  test_summary.py  test_version.py
