[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graft"
dynamic = ["version"]
description = "Lightweight visual connectors that bridge vision encoders to LLMs for visual instruction tuning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nathanm" }]
keywords = ["multimodal", "vision-language", "projector", "resampler", "llm"]
dependencies = [
    "torch>=2.1",
]

[tool.hatch.version]
path = "graft/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["graft"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff==0.15.19",
    "mypy>=1.8",
]
