[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graft"
dynamic = ["version"]
description = "Lightweight visual connectors that bridge vision encoders to LLMs for visual instruction tuning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Nathanm" }]
keywords = ["multimodal", "vision-language", "projector", "resampler", "llm"]
dependencies = [
    "torch>=2.1",
]

[tool.hatch.version]
path = "graft/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["graft"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=7.1.0",
    "ruff==0.15.19",
    "mypy>=1.8",
    "pyyaml>=6.0",
]
yaml = ["pyyaml>=6.0"]

[project.scripts]
graft = "graft.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["B905"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"examples/*" = ["E501", "T201"]
"benchmarks/*" = ["E501", "T201"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["torch", "torch.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=graft --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["graft"]
branch = true
omit = ["graft/cli.py", "graft/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
